[package]
name = "numrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
opt-level = 3
strip = true
panic = "abort"
codegen-units = 1

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
num-traits = "0.2.14"
rand = "0.8.4"
rayon = "1.5.1"
getrandom = { version = "0.2.3", features = ["js"] }
serde = { version = "1.0.133", features = ["derive"] }
wasm-bindgen = { version = "0.2.78", features = ["serde-serialize"] }
web-sys = { version = "0.3.55", features = ["console"]}
